fixed datatable overflow, changed top-left corner text to icon

--- a/resources/assets/css/default-dark.css
+++ b/resources/assets/css/default-dark.css
@@ -48,9 +48,6 @@ body {
 .top-left-part {
   background: #353c48;
 }
-.logo i {
-  color: #ffffff;
-}
 .navbar-header {
   background: #4F5467;
 }
