--- a/resources/assets/css/default-light.css
+++ b/resources/assets/css/default-light.css
@@ -45,9 +45,6 @@ body {
   background: #fff;
 }
 /*Top Header Part*/
-.logo i {
-  color: #ffffff;
-}
 .top-left-part .light-logo {
   display: inline-block;
 }
